# anime-watcher

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: api.rs  config.rs  download.rs  error.rs  history.rs  lib.rs  main.rs  tui.rs  types.rs  ui.rs
src/tui/: mod.rs  render.rs  state.rs  types.rs
tests/: integration_tests.rs
