[package]
name = "anime-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
crossterm = "0.28"
dirs = "6"
env_logger = "0.11"
log = "0.4"
ratatui = "0.29"
regex = "1.12.2"
reqwest = {version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = {version = "1.48.0", features = ["macros", "rt-multi-thread", "sync"] }
toml = "0.8"
